<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/traquer_black">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_margin_left"
            android:layout_marginRight="@dimen/login_margin_right">

            <ImageView
                android:id="@+id/appNameTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/login_logo_bottom_margin"
                android:layout_marginTop="@dimen/login_logo_top_margin"
                />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/labelEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/appNameTxt"
                android:theme="@style/TextLabel">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtEmail"
                    fontPath="fonts/source_sans_pro_semi_bold.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_address_text"
                    android:inputType="textEmailAddress"
                    android:maxLength="50"
                    android:paddingBottom="@dimen/text_padding_bottom"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/text_16"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/labelPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/labelEmailAddress"
                android:layout_marginTop="45dp"
                android:theme="@style/TextLabel">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edt_password"
                    fontPath="fonts/source_sans_pro_semi_bold.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_text"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:paddingBottom="@dimen/text_padding_bottom"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/text_18"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/btn_show"
                fontPath="fonts/source_sans_pro_regular.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/labelPassword"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/button_margin_bottom"
                android:gravity="center"
                android:text="@string/show"
                android:textAllCaps="false"
                android:textColor="@color/eight_c"
                android:textSize="@dimen/text_12" />




            <TextView
                android:id="@+id/btn_submit"
                fontPath="fonts/source_sans_pro_semi_bold.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/labelPassword"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="22dp"
                android:layout_marginTop="100dp"
                android:background="@drawable/btn_blue"

                android:gravity="center"
                android:text="@string/login_button_text"
                android:textColor="@color/traquer_white"
                android:textSize="16sp" />


            <LinearLayout
                android:id="@+id/forgotPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/btn_submit"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtForgotPassword"
                    fontPath="fonts/source_sans_pro_semi_bold.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#b9b9b9"
                    android:textSize="16sp" />


                <TextView
                    fontPath="fonts/source_sans_pro_semi_bold.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reset_your_password"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />



            </LinearLayout>

            <TextView
                android:layout_below="@+id/forgotPasswordLayout"
                android:id="@+id/txtProdcution"
                android:layout_centerHorizontal="true"

                android:layout_marginTop="5dp"
                fontPath="fonts/source_sans_pro_semi_bold.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textSize="10sp" />

            <TextView
                android:layout_below="@+id/txtProdcution"
                android:id="@+id/txtSendDiagnostic"
                android:layout_centerHorizontal="true"
                android:paddingBottom="10dp"
                android:layout_marginTop="5dp"
                fontPath="fonts/source_sans_pro_semi_bold.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_diagnostic_text"
                android:textColor="#ffffff"
                android:textSize="16sp" />


        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
