<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/traquer_black">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/login_margin_left"
            android:layout_marginRight="@dimen/login_margin_right">


            <ImageView
                android:id="@+id/appNameTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/login_logo_top_margin"
                />

            <com.nicbit.traquer.stryker.util.TypefaceTextView
                android:id="@+id/infoText"
                fontPath="fonts/source_sans_pro_regular.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/appNameTxt"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="58dp"

                android:gravity="center"
                android:text="@string/reset_your_password_new"
                android:textColor="@color/traquer_white"
                android:textSize="15sp" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/labelNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/infoText"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/edtNewPassword"
                    fontPath="fonts/source_sans_pro_regular.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_password_text"
                    android:inputType="textPassword"
                    android:paddingBottom="@dimen/text_padding_bottom"

                    android:textColor="@color/traquer_white"
                    android:textSize="@dimen/text_size_style5"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/labelconfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/labelNewPassword"
                android:layout_marginTop="@dimen/textviews_margin"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/edtConfirmPassword"
                    fontPath="fonts/source_sans_pro_regular.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password_text"
                    android:inputType="textPassword"
                    android:paddingBottom="@dimen/text_padding_bottom"

                    android:textColor="@color/traquer_white"
                    android:textSize="@dimen/text_size_style5"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>


            <com.nicbit.traquer.stryker.util.TypefaceTextView
                android:id="@+id/btn_save_password"
                fontPath="fonts/source_sans_pro_semi_bold.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/button_margin_bottom"
                android:background="@drawable/btn_blue"
                android:gravity="center"
                android:text="@string/save_button_text"
                android:textAllCaps="true"
                android:layout_marginTop="102dp"
                android:layout_below="@+id/labelconfirmPassword"
                android:textColor="@color/traquer_white"
                android:textSize="16sp" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
